--- a/article.tex
+++ b/article.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper]{report}
+\documentclass[lnbip]{svmultln}
 \usepackage[utf8]{inputenc}
 \usepackage[norsk, english]{babel}
 \usepackage[toc,page]{appendix}
@@ -12,6 +12,7 @@
 \usepackage{afterpage}
 \usepackage{multirow}
 \usepackage{enumitem}
+\usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
 
 \begin{document}
