Bjørn ser på resten av discussion

--- a/discussion.tex
+++ b/discussion.tex
@@ -1,1 +1,96 @@
-discussion
+\section{Discussion}
+
+\subsection{Retrospective Characteristics}
+One of our research objectives was: \textit{What are the main characteristics in current retrospective practices, in
+terms of outcome, processes and impediments?} Throughout this section we will provide a descriptive discussion on the characteristics we have identified throughout our studies. The section is split into three parts: Output, Process Characteristics and Impediments. An overview of all the characteristics can be seen in \autoref{table:retrospective-properties}
+
+\begin{table}[h]
+	\begin{center}
+		\caption{Retrospective characteristics}
+		\label{table:retrospective-properties}
+		\begin{tabular}{p{0.9\textwidth}}
+			\hline
+			\textit{Retrospective Characteristics}\\
+			\hline
+			\textbf{Output} \\
+			Reflection on work processes, technical issues, work environment \\
+			Creates improvement opportunities \\
+			Improvement implementation \\
+			Provides organizational learning \\
+			Can improve team enthusiasm \\
+			Can decrease team enthusiasm \\ 
+			Can improve efficiency  \\
+			Facilitates empowerment \\
+			\hline 
+			\textbf{Process Characteristics}\\
+			Little considerations taken \\
+			Wish to improve \\
+			Varying techniques\\
+			Occurs regularly\\
+			Collects opinions from participants\\
+			Arena for open discussion \\
+			Allows for experiments in work environment\\
+			Shared learning event\\
+			\hline
+			\textbf{Impediments}\\
+			Team commitment\\
+			Enforcing of process improvement actions\\
+			\hline
+		\end{tabular}
+	\end{center}
+\end{table}
+
+\subsubsection{Output}
+
+\paragraph{Creates Improvement Opportunities}
+Through our studies we have seen that teams are able to improve based on decisions created during the retrospective. From the depth study of Team Zulu we saw that through 77 retrospectives the team had created 343 actions which reflect improvement opportunities. Also all the teams in our breadth study created actions to improve some aspect of their work-life. It is clearly evidence that improvement opportunities are created through the retrospective. This seems to fit well with previous research \cite{Larsen2006, Dingsoyr2004, Drury2012} that the retrospective help identify improvement opportunities. 
+
+\paragraph{Improvement Implementation}
+The question if the improvement opportunities are actually implemented can also be seen through our studies. The results of our studies revealed that most of the teams were satisfied with their implementation rate. From team Zulu we learned that only 65 of the 343 actions were not yet implemented. It was also revealed that implementation could be a challenge, as was the case with team Charlie. We identified two methods that seemed to help overcome this challenge. The first was assigning responsible team members to each action. The second was SCRUM master follow-up of the actions. We have seen that retrospective practicing agile development teams are able to implement improvement opportunities confirming Derby and Larsen's \cite{Larsen2006} statement of retrospective helping team adapt. This is contradicting the research of Drury et. al. \cite{Drury2012} which finds that no real changes occur as a result of the retrospective. 
+
+\paragraph{Can Improve Efficiency}
+The retrospective practice can, as we have seen in multiple examples, improve the efficiency of teams conducting them. Team Echo's practice changes from SCRUM to KANBAN and then to modified SCRUM and Team Zulu's ``Bug-crunch day'' are just two of the examples we have seen that the teams have been able to improve their efficiency through the retrospective practice. This again confirms the previous literature \cite{Dingsoyr2004, Larsen2006, Kinoshita2008} that retrospectives are able to improve practices and contradicts the finding of Drury et. al. \cite{Drury2012} that retrospectives provide no real changes.
+
+\paragraph{Allows for Experiments in the Work Place}
+\label{section:experiments-in-work-place}
+As seen in \autoref{section:Derby-Larsen-Structure} a retrospective can be an area that facilitates experimentation in a team. We have observed this, for example as described with team Echo in \autoref{question-11}. Here team Echo tried to move to KANBAN from SCRUM, the experiment was not an immediate success, but allowed them to return to a SCRUM methodology that they could tailor after their experiences from the experiment. This resulted in their work methodology fitting their team better. Our work with team Zulu also led to experimentation, for example their decision to create a dashboard to log their retrospective actions. Another experiment by team Zulu was the inclusion of a ``bug-crunch'' day seen in \autoref{question-11}. This experiment was a success and led to a noticeable decrease in bugs.
+
+\paragraph{Shared Learning Event}
+The theory of the retrospective as a shared learning event was described in \autoref{intro:retro-outcome}.  An example of a shared learning event from the same section was performed by team Delta, as they changed their time estimation practices to great success after discussing the process in a retrospective. However none of the teams interviewed made an organized effort to make the result of the retrospective a learning event for personnel outside the team, as recommended by Dingsøyr ~\cite{Dingsoyr2004}.
+
+\paragraph{Enthusiasm}
+\label{section:positive-loop-enthusiasm}
+Team enthusiasm is both affected by the retrospective practice and inflicted by it. It can be increased through a positive feedback loop or decreased by a negative feedback loop. As a result of the retrospective practice individual empowerment is facilitated and this also increases the enthusiasm. We will describe and discuss each of these statements below through examples from our studies and earlier literature. 
+\label{posi-loop}
+We have seen that the enthusiasm of the participants of retrospective practice can be both affected by the retrospective. We uncovered a positive loop that helps increase the enthusiasm of the team conducting retrospectives. If changes occurred as a result of the retrospective the participants would become enthusiastic and thus the chance of more changes would occur. Ownership towards the development process was one factor that could help increase the enthusiasm and feed the positive loop. This positive loop confirms what Derby and Larsen \cite{Larsen2006} states that teams are invested in the success of improving their work as the improvements are chosen by the teams themselves and not from upper management. 
+\label{negi-loop}
+The retrospective practice has also the ability to decrease the enthusiasm of the practicing team. As the opposite of the positive loop a negative are able to decrease the enthusiasm. If no changes occur enthusiasm will decrease and as the enthusiasm decreases the chance of new changes occurring decreases. Some even might see the retrospective as a waste of time as described by team Charlie's SCRUM master which had happened with some of the teams in his department. This confirms our previous literature review \cite{Dolvik2014} that recurring issues kill the joy and Drury et. al. \cite{Drury2012} research that some may see the retrospective as a waste of time. 
+
+\paragraph{Facilitates Empowerment}
+Ownership towards the development process was seen as crucial towards getting improvement out of the retrospective by the interviewed teams. Each team member has the possibility to participate in shaping their working process through the retrospective. As seen in team Alfa and Echo even the shy are required to participate in returning feedback and contribute solutions for current work processes. Tessem \cite{Tessem2014} identifies participation in process improvements as an empowering practice. This directly relates to the retrospective practice, which is also a parallel drawn by Tessem and our work supports this. Enthusiasm is increased as members are empowered\cite{Tessem2014} and thus the retrospective increase enthusiasm through empowerment. 
+
+\subsubsection{Process Characteristics }
+
+When we consider our results we see that few of the teams interviewed do a thorough consideration of their practices in relation to the approaches seen in \autoref{table:postmortem-approach}. Most teams did not do a informed decision on several of Dingsøyr's considerations. For example on who to invite or sharing tacit and explicit knowledge. For example team Alpha's interviewee said that it could go long periods of time where a developer was not invited to a retrospective. When it comes to sharing the knowledge generated none of the teams made a concerted effort to share the knowledge further in their organization that came as a results of learning through the retrospective.
+
+Many teams had a great wish to improve. As seen throughout our results the need to build a culture that allows for learning is absolutely essential for a productive environment. This is in accord with  Dingsøyr's work. Especially trust between the team members emerged as critical for reaching the maximum potential of a retrospective session. An example of the possible improvements is the team dynamic improvements experienced by team Delta when one of their team members brought up the problem that he was not getting help from other team members, as described in \autoref{question-21}. Also after our depth analysis with team Zulu their eagerness to improve let them turn the results from our analysis into a basis for multiple actions intended to improve the team's learning capabilities. 
+
+
+\subsubsection{Impediments}
+
+Some personalities could provide obstacles for the retrospective. We saw three examples of this. The first one was in team Zulu where cultural differences provided miscommunication and difficulty providing an open discussion in the retrospective. The second was in the department to team Charlie where some SCRUM masters had low enthusiasm for the retrospective practice and this could influence the rest of the teams as well. The third example were two senior developers with strong personalities, in team Charlie, that could hinder the other developers from voicing their opinions. These were the only three cases we saw in our studies, but further personalities may be investigated. Derby and Larsen \cite{Larsen2006} talks about personalities that take a lot of time and hinder others from taking part in the retrospective and this is reflected pretty well in the last example.
+
+Even though most of the teams in our study was satisfied with the commitment from their teams, implementation of actions still could provide a challenge. As mentioned by several of the interviewees if the actions were not assigned to a specific person the action would not be implemented. This indicates that the team as a whole don't have the commitment to implementation of retrospective actions. Drury et. al. \cite{Drury2012} described several obstacles that fit with these results. Team members unwilling to commit and relying on SCRUM master, not implementing decisions or relying on others for decisions, and not taking ownership of decisions are all obstacles that could be identified through our research. However as mentioned this was only the case when the group as whole was assigned to a decision, when individuals of the group were assigned the teams were satisfied with the implementation rate. This still indicates however a lack of team commitment even though the consequences are dealt with. 
+
+Enforcing the implementation of process improvement actions was seen as a challenge. The SCRUM master of team Zulu described how enforcing and monitoring process improvement actions was a challenge. Some process changes required the whole team to implement the action and both enforcing the implementation and monitor it could be hard. Conflicting priorities and not taking ownership for decisions are two of Drury's et. al. \cite{Drury2012} obstacles to effective decision making, and these results reflects the two obstacles. 
+
+The last impediment we have seen for conducting retrospective is availability. In team Golf we saw how having a distributed team could make it harder to conduct the retrospective. In team Alfa and Foxtrot we learned how the unavailability of retrospective due to long timespan or participants not being able to participate could inhibit the retrospective. Zedtwitz's \cite{Zedtwitz2002} barrier of memory bias and Drury et. al. \cite{Drury2012} obstacle of unavailable staff is reflected in this. 
+
+\subsection{Organization Learning}
+One of our research objectives were: \textit{How is learning achieved through current retrospective practices, in light of organizational learning theory?} Throughout this section we will first discuss the results of our case-studies in terms of the governing values of Argyris and Schön's \cite{Argyris1996} organizational learning Model I and Model II. Secondly we will discuss our results in terms of learning types. 
+
+\subsubsection{Model I}
+In Model I, described in \autoref{sub:model_i}, four governing values set the focus for the learning organization. In our investigation of the retrospective practice we have seen very little to any of these values. We will discuss this below for each governing value and then the consequences before we summarize the findings related to Model I.  
+
+\paragraph{Setting and  Achieving Goals}
+One could argue that the team setting goals and achieving them could be compared to creating actions and fulfilling them, however we do not support this as the fulfillment of actions is part of a collective efficiency improvement and learning practice. The retrospective and its participants are instead of trying to design and manage the environment unilaterally, investigating all the different angles and perspectives the team can present and finding solutions to the problems existing within that environment. The joint team discussion and retrospective practices are evidence of this. 
