--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,1 +1,21 @@
-conclusion
+\section{Conclusion}
+Throughout this thesis we have conducted an empirical study, of mature agile development teams. Investigating the outcome returned from the retrospective in terms of organizational learning and retrospective characteristics. Thereby answering Dingsøyr and Dybå’s call \cite{Dyba2008} for empirical studies into mature agile development teams. For the practitioners we have investigated the outcome of the characteristics and proposed a set of guidelines which could help improve their practice.
+
+The current characteristics of todays retrospective we have seen that the outcome of the practice is improvement opportunities and learning which could result in improved efficiency, increased enthusiasm and adaptation of work-processes, work environment, and product quality. For the processes of the practice we have identified a feedback loop with a barrier for implementation of improvement opportunities, depending on team commitment for implementation and enthusiasm for the retrospective. 
+
+\begin{itemize}
+\item Retrospectives allow teams to improve their current work-practices through learning, team commitment and investigation of past development phases.
+\end{itemize}
+
+The studies revealed that mature agile development teams that practice retrospectives is approximating an organizational learning II system as described by Argyris and Schön \cite{Argyris1996}. We have identified one barrier to double-loop learning which consists of several factors. We have seen that reflection on ones own learning helps give focus to the retrospective and lower this barrier and we have proposed a method for this. 
+
+\begin{itemize}
+\item Learning in the present retrospective practices are primary single-loop learning, however the learning environment could facilitate double-loop learning.
+\end{itemize}
+
+Previous critique \cite{Drury2012} have stated that the retrospective does not provide any changes to the work environment and we have observed that this could be the case if the team are not able to overcome the team commitment barrier for implementation of improvement opportunities.  
+
+Finally todays retrospective practices provide agile development teams the ability to adapt their current work-practices and enables them to learn from past development iterations and thus provide the means for identifying improvement opportunities and improve from them. 
+
+\section{Future Work}
+For future work we would recommend conducting similar studies to increase the sample size of this research. Further development to the meta-retrospective and researh into the effects of it would also be intersting to see. Determining the value of doing double-loop learning and investigating the retrospectives through models of shared mental models would also help enrich the resarch of knowledge sharing and the practice of retrospectives. 
